# tools-sdk

./: .yamlfmt.yml  CMakeLists.txt  README.md
.github/workflows/: cdash-status.yml  lint.yml  security.yml
.gitlab/: gitlab-ci-frontier.yml  sync-spack.yml
.gitlab/config/: dynamic_pipeline.yml.in  generate_pipelines.py
scripts/: run-shellcheck.sh  run-yamlfmt.sh
scripts/ci/gitlab-ci/: cdash-upload.patch  run.sh  setup-vars.sh
spack/configs/: packages.yaml
spack/frontier/: README.md  modules.yaml  spack.yaml
spack/template/: spack.yaml
